added icons to project list

--- a/src/style/pages/_projects.scss
+++ b/src/style/pages/_projects.scss
@@ -75,9 +75,10 @@ left Body Area
 
   .index {
     position: relative;
-    left: -50px;
-    top: 40px;
+    left: -5px;
+    top: 21px;
     font-weight: 400;
+    height: 48px;
   }
 
   .splide__track {
