--- a/src/style/pages/_careers.scss
+++ b/src/style/pages/_careers.scss
@@ -1,184 +1,140 @@
-.careersLeftSvg1{
-    position: absolute;
-    z-index: 2;
-    width: 77%;
+.careersLeftSvg1 {
+  position: absolute;
+  z-index: 2;
+  width: 77%;
 }
-.careersLeftSvg2{
-    position: absolute;
-    z-index: 1;
-    left: 0px;
-    bottom: 0px;
-}
-
-
-.careersArea{
-    display: grid;
-    grid-template-columns: 33.333% 33.333% 33.333%;
-    grid-template-rows: auto auto auto;
-    width: 100%;
-    height: 100%;
-    flex-wrap: wrap;
-    overflow-y: scroll;
+.careersLeftSvg2 {
+  position: absolute;
+  z-index: 1;
+  left: 0px;
+  bottom: 0px;
 }
 
-
-
-
-
-.careerDiv{
-    flex-wrap: wrap;
-    font-size: 14px;
-    color: white;
-    font-family: NanoTech;
-    border: 1px solid #3D4544;
-    display: flex;
-    justify-content: left;
-    width: 1/3;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 15px 0px 10% 44px;
+.careersArea {
+  display: grid;
+  grid-template-columns: 33.333% 33.333% 33.333%;
+  grid-template-rows: auto auto auto;
+  width: 100%;
+  height: 100%;
+  flex-wrap: wrap;
+  overflow-y: scroll;
 }
 
-.careerDiv li{
-    list-style-type: none;
-    font-family: NanoTech;
-    font-size: 14px;
-    line-height: 20px;
+.careerDiv {
+  flex-wrap: wrap;
+  font-size: 14px;
+  color: white;
+  font-family: NanoTech;
+  border: 1px solid #3d4544;
+  display: flex;
+  justify-content: left;
+  width: 1/3;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 15px 5px 10% 44px;
 }
 
-
-
-
-
-
+.careerDiv li {
+  list-style-type: none;
+  font-family: NanoTech;
+  font-size: 14px;
+  line-height: 20px;
+}
 
 /* --------
  Typography
 
 ---------- */
-  
 
-  
-  .title{
-    font-size: 34px;
-    font-family: NanoTech;
-    font-weight: 400;
-    color: white;
-  }
-  
+.title {
+  font-size: 34px;
+  font-family: NanoTech;
+  font-weight: 400;
+  color: white;
+}
 
-  
-  
-  
-  
+.careers-body__right {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: column;
+}
 
+.careerBtn {
+  width: auto;
+  height: 26px;
+  outline: none;
+  overflow: hidden;
+  border: none;
+  color: white;
+  background-color: #131c1b;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  font-size: 20px;
+  transition: 0.3s;
+}
 
-    
+.careerBtn:hover,
+.sendResumeBtn:hover,
+.backButton:hover {
+  color: #19a79e;
+}
 
-    
-    .careers-body__right {
-      display: flex;
-      justify-content: flex-start;
-      align-items: center;  
-      flex-direction: column;
-    }
+.buttonDiv {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  flex-direction: row;
+  left: 0px;
+  margin-top: 15%;
+  z-index: 1;
+  position: relative;
+}
 
+.mailDiv {
+  z-index: 1;
+}
 
+.resumeDiv {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 100%;
+  height: 100%;
+}
 
+.careerBtn,
+.backButton,
+.sendResumeBtn {
+  width: auto;
+  height: 26px;
+  outline: none;
+  overflow: hidden;
+  border: none;
+  border-radius: 5px;
+  color: white;
+  background-color: #131c1b;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  font-size: 20px;
+  transition: 0.3s;
+}
 
-    
-  
-  .careerBtn{
-    width: auto;
-    height: 26px;
-    outline: none;
-    overflow: hidden;
-    border: none;
-    color: white;
-    background-color:#131c1b;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    font-size: 20px;
-    transition: 0.3s;
-  }
+.resumeMail {
+  padding: 13px;
+  outline: none;
+  border: 0px;
+  width: 77%;
+}
+input[type="text"] {
+  font-size: 17px;
+}
 
-
-  .careerBtn:hover, .sendResumeBtn:hover, .backButton:hover{
-    color: #19a79e
-  }
-  
-  
-  
-  
-  .buttonDiv{
-    display: flex;
-    justify-content: left;
-    align-items: center;
-    flex-direction: row;
-    left: 0px;
-    margin-top: 15%;
-    z-index: 1;
-    position: relative;
-  }
-  
-    
-
-  .mailDiv{
-    z-index: 1;
-  }
-  
-  
-
-
-    .resumeDiv{
-      display: flex;
-      flex-direction: column;
-      justify-content: space-around;
-      width: 100%;
-      height: 100%;
-    }
-   
-
-    .careerBtn, .backButton, .sendResumeBtn{
-      width: auto;
-      height: 26px;
-      outline: none;
-      overflow: hidden;
-      border: none;
-      border-radius: 5px;
-      color: white;
-      background-color:#131c1b;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      cursor: pointer;
-      font-size: 20px;
-      transition: 0.3s;
-    }
-
-    .resumeMail{
-      padding: 13px;
-      outline: none;
-      border: 0px;
-      width: 77%;
-    }
-    input[type= "text"]{
-      font-size: 17px;
-    }
-
-
-
-
-
-
-
-
-  
-
-
-.mailInput{
+.mailInput {
   padding: 7px;
   font-size: 14px;
   border: none;
@@ -186,7 +142,7 @@
   border-radius: 3px;
 }
 
-.message{
+.message {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -199,8 +155,7 @@
   z-index: 2;
 }
 
-
-.listDiv{
+.listDiv {
   height: 100%;
   width: 100%;
   display: flex;
@@ -208,26 +163,22 @@
   flex-direction: column;
 }
 
-
-
-
-
 @media (max-width: 1000px) {
-  .careersArea{
+  .careersArea {
     display: grid;
     justify-content: center;
     grid-template-columns: 100%;
   }
-  .careerDiv{
+  .careerDiv {
     align-items: center;
-    padding: 15px 0px 10% 0px
+    padding: 15px 0px 10% 0px;
   }
 
-  .resumeDiv{
+  .resumeDiv {
     align-items: center;
   }
 
-  .listDiv{
+  .listDiv {
     height: 100%;
     width: 100%;
     display: flex;
@@ -235,9 +186,8 @@
     flex-direction: column;
     align-items: center;
   }
-
 }
-.fileDiv{
+.fileDiv {
   height: 25%;
   width: 193px;
   border: 2px dashed #ffffff;
@@ -252,12 +202,11 @@
   padding: 23px;
   transition: 0.3s;
 }
-.dragFileHere{
-    font-size: 15px;
-    transition: 0.5s;
-    font-family:  NanoTech;
+.dragFileHere {
+  font-size: 15px;
+  transition: 0.5s;
+  font-family: NanoTech;
 }
-
 
 @media (max-width: 1200px) {
   .careers-body__right {
@@ -271,21 +220,15 @@
   }
 }
 
-
-
-
-
-.nonDisplay{
+.nonDisplay {
   display: none;
 }
 
-
-.resumeList{
+.resumeList {
   display: none;
 }
 
-
-.dragInputDiv{
+.dragInputDiv {
   height: 35%;
   width: 100%;
   position: absolute;
@@ -295,7 +238,7 @@
   opacity: 0;
 }
 
-.dragInput{
+.dragInput {
   height: 100%;
   width: 100%;
   position: absolute;
@@ -304,7 +247,7 @@
   top: 0px;
   opacity: 0;
 }
-.forOpacity{
+.forOpacity {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -315,4 +258,3 @@
   top: 0px;
   transition: 0.5s;
 }
-
