changed introtext width

--- a/src/style/pages/_home.scss
+++ b/src/style/pages/_home.scss
@@ -64,6 +64,11 @@
   display: none;
 }
 
+.home-big__img {
+  width: 1449.001px;
+  height: 380.019px;
+}
+
 @media (min-width: 700px) {
   .home__menu {
     cursor: pointer;
