--- a/src/style/pages/_contact.scss
+++ b/src/style/pages/_contact.scss
@@ -25,6 +25,9 @@
 }
 
 .contact-body__right {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   .contact__info {
     p {
       :hover {
@@ -33,9 +36,8 @@
     }
     height: 39%;
     display: flex;
-    width: 100%;
+    width: 94%;
     justify-content: space-around;
-    align-items: center;
 
     .contact__address,
     .contact__worktime {
@@ -55,7 +57,6 @@
     justify-content: flex-end;
     align-items: flex-end;
     height: 40%;
-    margin-top: 4.8%;
 
     .social__media {
       :last-child {
