--- a/src/style/pages/_blogs.scss
+++ b/src/style/pages/_blogs.scss
@@ -5,12 +5,18 @@
 
 .blogsArea {
   display: grid;
-  grid-template-columns: auto auto;
+  grid-template-columns: 50% 50%;
   height: 100%;
   width: 100%;
-  justify-content: space-between;
+  // justify-content: space-between;
+  overflow-x: hidden;
   overflow-y: scroll;
   flex-wrap: wrap;
+  position: relative;
+}
+.oneBlogArea {
+  grid-template-columns: 100%;
+  position: relative;
 }
 
 .title {
@@ -29,8 +35,8 @@
   margin-left: -77%;
 }
 .glass1 {
-  position: absolute;
-  z-index: 1;
+  position: fixed;
+  z-index: 2;
   height: 70%;
   width: 70%;
   right: -17%;
@@ -111,8 +117,8 @@
 .blogDiv.readMore .moreText {
   display: inline;
 }
-.blogDiv.readMore {
-  height: 100%;
+.readMore {
+  height: fit-content;
   width: 100%;
   position: relative;
 }
@@ -148,16 +154,13 @@
 
 @media (max-width: 1000px) {
   .blogsArea {
-    display: grid;
-    grid-template-columns: 100%;
     align-items: center;
-    overflow-y: scroll;
-  }
-}
-
-@media (max-width: 550px) {
-  .blogsArea {
     display: flex;
     flex-direction: column;
+    height: fit-content;
+    height: 100vh;
+    position: relative;
+    overflow-y: scroll;
+    overflow-x: scroll;
   }
 }
