--- a/src/style/pages/_blogs.scss
+++ b/src/style/pages/_blogs.scss
@@ -21,8 +21,8 @@
 
 .title {
   font-size: 34px;
-  font-family: NanoTech;
-  font-weight: 400;
+  font-family: NeueMachina;
+  font-weight: bolder;
   color: white;
 }
 
@@ -56,7 +56,7 @@
   font-size: 14px;
   overflow-y: auto;
   color: #e6e6e6;
-  font-family: NanoTech;
+  font-family: NeueMachina;
   padding-right: 20%;
   line-height: 24px;
   font-weight: 100;
