--- a/src/style/pages/_careers.scss
+++ b/src/style/pages/_careers.scss
@@ -24,7 +24,7 @@
   flex-wrap: wrap;
   font-size: 14px;
   color: white;
-  font-family: NanoTech;
+  font-family: NeueMachina;
   border: 1px solid #3d4544;
   display: flex;
   justify-content: left;
@@ -36,7 +36,7 @@
 
 .careerDiv li {
   list-style-type: none;
-  font-family: NanoTech;
+  font-family: NeueMachina;
   font-size: 14px;
   line-height: 20px;
 }
@@ -206,7 +206,7 @@ input[type="text"] {
 .dragFileHere {
   font-size: 15px;
   transition: 0.5s;
-  font-family: NanoTech;
+  font-family: NeueMachina;
 }
 
 @media (max-width: 1200px) {
