--- a/src/style/pages/_customers.scss
+++ b/src/style/pages/_customers.scss
@@ -2,15 +2,13 @@
  Typography
 ---------- */
 
-
-
 .customers__body {
   overflow: hidden;
 
   h3 {
     white-space: nowrap;
     color: #e6e6e6;
-    font-family: NanoTech;
+    font-family: NeueMachina;
     font-weight: 400;
     margin: 0;
     font-size: 9rem;
@@ -50,12 +48,11 @@
   }
 }
 
-
 /* -------- 
  MEDIA
 ---------- */
 
-.header__title__customers{
+.header__title__customers {
   width: 100%;
   position: absolute;
   justify-content: center;
