--- a/src/style/pages/_projects.scss
+++ b/src/style/pages/_projects.scss
@@ -41,7 +41,7 @@ left Body Area
 
   h4 {
     font-size: 2.8rem;
-    font-family: RailGrotesk;
+    font-family: NeueMachina;
     margin: 0;
     display: inline-block;
     font-weight: 400;
@@ -49,12 +49,12 @@ left Body Area
 
   span {
     font-size: 2.8rem;
-    font-family: RailGrotesk;
+    font-family: NeueMachina;
     font-weight: 400;
   }
 
   p {
-    font-family: RailGrotesk;
+    font-family: NeueMachina;
     font-weight: 400;
     font-size: 1.7rem;
     font-weight: 400;
@@ -67,7 +67,7 @@ left Body Area
   }
 
   .footer {
-    font-family: NanoTechItalic;
+    font-family: NeueMachina;
     font-size: 1.7rem;
     margin-top: 5vh;
     font-weight: 400;
@@ -137,7 +137,7 @@ left Body Area
   a {
     margin-top: 5px;
     font-size: 20px;
-    font-family: RailGrotesk;
+    font-family: NeueMachina;
   }
 }
 
