--- a/src/style/pages/_aboutus.scss
+++ b/src/style/pages/_aboutus.scss
@@ -6,7 +6,7 @@
   font-size: 18px;
   color: #e6e6e6;
   line-height: 24px;
-  font-family: NanoTech;
+  font-family: NeueMachina;
   padding: 0px 44px 0px 44px;
   max-height: 100%;
   overflow-y: auto;
@@ -26,7 +26,7 @@
 .abVal {
   color: white;
   position: absolute;
-  font-family: Nanotech;
+  font-family: NeueMachina;
   font-size: 3rem;
 }
 
@@ -83,7 +83,6 @@
   .abVal {
     color: white;
     position: absolute;
-    font-family: Nanotech;
     font-size: 3.3rem;
   }
 
@@ -127,7 +126,6 @@
   .abVal {
     color: white;
     position: absolute;
-    font-family: Nanotech;
     font-size: 4rem;
   }
 }
@@ -169,7 +167,6 @@ Body Area
   .abVal {
     color: white;
     position: absolute;
-    font-family: Nanotech;
     font-size: 4rem;
   }
 
