--- a/src/style/pages/_contact.scss
+++ b/src/style/pages/_contact.scss
@@ -6,14 +6,14 @@
   h3 {
     color: #c9c9c9;
     font-size: 2.4rem;
-    font-family: RailGrotesk;
+    font-family: NeueMachina;
     opacity: 0.7;
   }
   p,
   .contact-address__Initials {
     font-size: 2.8rem;
     color: #c9c9c9;
-    font-family: NanoTech;
+    font-family: NeueMachina;
   }
 }
 /* --------
