--- a/src/style/pages/_home.scss
+++ b/src/style/pages/_home.scss
@@ -11,8 +11,8 @@
       a {
         text-decoration: none;
         color: #e6e6e6;
-        font-size: 28px;
-        font-family: RailGrotesk;
+        font-size: 25px;
+        font-family: NeueMachina;
         margin-left: 5px;
         margin-right: 5px;
       }
@@ -116,9 +116,8 @@
   .home-header__navigation {
     ul {
       li {
-        padding-top: 3px;
         a {
-          font-size: 2rem;
+          font-size: 1.8rem;
         }
       }
     }
