--- a/src/style/pages/_services.scss
+++ b/src/style/pages/_services.scss
@@ -5,9 +5,9 @@
 .service--body-text {
   white-space: nowrap;
   h3 {
-    font-size: 2.8rem;
+    font-size: 2.3rem;
     color: #e6e6e6;
-    font-family: RailGrotesk;
+    font-family: NeueMachina;
     margin: 0;
     font-weight: regular;
     letter-spacing: 0.5px;
@@ -17,9 +17,9 @@
     list-style-type: none;
     li {
       opacity: 70%;
-      font-size: 1.7rem;
+      font-size: 1.3rem;
       color: #e6e6e6;
-      font-family: NanoTech;
+      font-family: NeueMachina;
       font-weight: 400;
       line-height: 1.6;
       letter-spacing: 0.4px;
@@ -35,6 +35,21 @@
   width: 23px;
   height: 23px;
   margin-right: 10px;
+}
+
+@media (max-width: 1700px) {
+  .service--body-text {
+    h3 {
+      font-size: 2.8rem;
+      font-family: NeueMachina;
+    }
+    ul {
+      li {
+        font-size: 1.7rem;
+        font-family: NeueMachina;
+      }
+    }
+  }
 }
 
 @media (max-width: 1200px) {
