--- a/src/style/pages/_aboutus.scss
+++ b/src/style/pages/_aboutus.scss
@@ -74,7 +74,7 @@
   .abVal {
     color: white;
     position: absolute;
-    font-family: Nanotech;
+    font-family: NeueMachina;
     font-size: 4rem;
   }
 }
@@ -147,7 +147,7 @@ Body Area
     font-size: 18px;
     color: #e6e6e6;
     line-height: 24px;
-    font-family: NanoTech;
+    font-family: NeueMachina;
     padding: 0px 44px 0px 44px;
     max-height: 100%;
     overflow-y: auto;
