--- a/src/style/pages/_customers.scss
+++ b/src/style/pages/_customers.scss
@@ -27,13 +27,17 @@
  Layouts
 ---------- */
 
+#customers {
+  overflow: hidden;
+}
+
 .customers__body {
-  display: flex;
+  // display: flex;
   width: 100%;
   height: calc(100% - 126px);
-  justify-content: center;
   align-items: center;
   flex-direction: column;
+  overflow-y: scroll;
   .customers__names {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -80,6 +84,36 @@
     }
   }
 }
+
+@media (max-width: 1000px) {
+  .customers__body {
+    justify-content: flex-start;
+    .customers__names {
+      overflow-y: auto;
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+      justify-content: end;
+      h3 {
+        font-size: 2.8rem;
+        padding: 30px;
+        white-space: normal;
+        display: flex;
+        justify-content: space-around;
+
+        a {
+          width: 100px;
+        }
+      }
+      // .intranote {
+      //   grid-column: 2/-1;
+      // }
+      :last-child {
+        grid-column: 1/-1;
+        justify-self: center;
+      }
+    }
+  }
+}
 @media (max-width: 800px) {
   .customers__names {
     h3 {
@@ -99,9 +133,6 @@
       display: grid;
       grid-template-columns: 1fr 1fr;
       justify-content: end;
-      // :first-child {
-      //   margin-top: 5px;
-      // }
       h3 {
         font-size: 2.8rem;
         padding: 30px;
