--- a/src/style/pages/_sectionNavigation.scss
+++ b/src/style/pages/_sectionNavigation.scss
@@ -43,9 +43,10 @@
   display: flex !important;
   justify-content: center;
   ul {
-    // display: flex;
-    // flex-direction: column;
-    // justify-content: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
     list-style-type: none;
 
     padding-left: 0;
@@ -120,6 +121,7 @@
       height: 61px;
       display: flex;
       align-items: center;
+      width: 189px;
     }
   }
 
