--- a/src/style/pages/_sectionNavigation.scss
+++ b/src/style/pages/_sectionNavigation.scss
@@ -113,7 +113,7 @@
   overflow: hidden;
 
   ul {
-    height: 83vh;
+    height: 95%;
     overflow-y: auto;
 
     li {
@@ -121,7 +121,6 @@
       height: 61px;
       display: flex;
       align-items: center;
-      width: 189px;
     }
   }
 
@@ -140,8 +139,9 @@
     height: calc(100% - 96px);
 
     ul {
+      height: 80%;
       li {
-        margin-left: 21px;
+        margin-bottom: 57px;
       }
     }
   }
